--- a/newcommand.tex
+++ b/newcommand.tex
@@ -10,6 +10,9 @@
 \renewcommand\S{{\cal S}}
 \newcommand\R{{\cal R}}
 \newcommand\I{{\cal I}}
+\newcommand\X{{\cal X}}
+\newcommand\C{{\cal C}}
+\newcommand\D{{\cal D}}
 \newcommandx{\bmin}[1][1=i]{r_{#1}^{min}}
 \newcommandx{\bmax}[1][1=i]{r_{#1}^{max}}
 \newcommandx{\ES}[1][1=i]{est_{#1}}
