--- a/part2/PPC.tex
+++ b/part2/PPC.tex
@@ -1,5 +1,12 @@
+
+
+\cleardoublepage
+\begin{minipage}{0.95\linewidth}
 \part{Programmation par contraintes}
 \label{part:PPC}
+\vspace{15mm} % l'espacement souhaité
+\parttoc 
+\end{minipage}
 
 \input{part2/CuSP/PPC_CuSP.tex}
 \input{part2/CECSP/PPC_CECSP.tex}
